<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/invItemCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp"
    android:backgroundTint="@color/blueColour2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/itemViewCollapsed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <TextView
            android:id="@+id/txtInvItemName"
            android:transitionName="itemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="50"
            android:text="@string/defaultName"/>

        <TextView
            android:id="@+id/txtInvQuantity"
            android:transitionName="itemQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="20"
            android:text="@string/defaultQuantity"/>

        <TextView
            android:id="@+id/txtInvPrice"
            android:transitionName="itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="20"
            android:text="@string/defaultPrice"/>

        <ImageView
            android:id="@+id/itemDownArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/expandArrow"
            android:padding="5dp"
            android:src="@drawable/ic_down_arrow" />

        <ImageView
            android:id="@+id/itemUpArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/collapseArrow"
            android:padding="5dp"
            android:src="@drawable/ic_up_arrow"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemViewExpanded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemViewCollapsed"
        android:visibility="gone"
        android:weightSum="100">

        <Button
            android:id="@+id/btnAddInvItemToGrocery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:text="@string/btnAddToGrocery"
            android:backgroundTint="@color/blueColour3"/>

        <Button
            android:id="@+id/btnEditInvItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:text="@string/btnEdit"
            android:backgroundTint="@color/blueColour3"/>

        <Button
            android:id="@+id/btnRemoveInvItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:text="@string/btnRemove"
            android:backgroundTint="@color/blueColour3"/>
    </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>