...
        android:text="@string/labelName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/addItemScreenTitle" />

    <EditText
        android:id="@+id/inputInventoryItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/hintName"
        android:importantForAutofill="no"
...
        android:text="@string/labelQuantity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/inputInventoryItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/hintQuantity"
        android:importantForAutofill="no"
...
        android:text="@string/labelUnits"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/inputInventoryItemUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/hintUnits"
        android:importantForAutofill="no"
...
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCheckInvFish"
        android:backgroundTint="@color/blueColour3"/>

    <Button
        android:id="@+id/btnAddInventoryItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdd"
        app:layout_constraintBottom_toBottomOf="@+id/btnCancelAddInventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
...
